--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>CSS Selectors</h1>
-    <h2>Selectors</h2>
+    <h2>Simple Selectors</h2>
     <table>
       <thead>
         <tr><th>Example</th>
@@ -77,7 +77,7 @@
         </tr>
       </tbody>
     </table>
-    <h2>Simple Selectors</h2>
+    <h2>Cheatsheet</h2>
     <table>
       <thead>
         <tr><th>Selector</th>
